--- a/app/src/main/res/drawable/defaultselected_letterbox.xml
+++ b/app/src/main/res/drawable/defaultselected_letterbox.xml
@@ -4,9 +4,9 @@
 
     <solid android:color="#6A2626"/>
 
-<!--    <stroke-->
-<!--        android:width="2dp"-->
-<!--        android:color="#D2B48C" />-->
+        <stroke
+            android:width="2dp"
+            android:color="@color/beige" />
 
     <corners android:radius="5dp" />
 </shape>
