--- a/app/src/main/res/drawable/keyboard_border.xml
+++ b/app/src/main/res/drawable/keyboard_border.xml
@@ -2,11 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#2A2A2A" />
-    <stroke
-        android:width="3dp"
-        android:color="#A9A1A1" /> <!-- Border color (black) -->
-
-    <!-- Make corners sharp (optional, set to 0dp for sharp corners) -->
+    <solid android:color="#FAEBD7" />
     <corners android:radius="5dp" />
+
 </shape>
