--- a/app/src/main/res/layout/tictactoe_layout.xml
+++ b/app/src/main/res/layout/tictactoe_layout.xml
@@ -9,176 +9,107 @@
     android:background="#1a1a1a"
     tools:context=".TicTacToeActivity">
 
-    <TextView
-        android:id="@+id/event"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:gravity="center"
-        android:textAppearance="@style/custom_font"
-        android:textColor="@color/beige"
-        android:textSize="50sp"/>
-
-    <TextView
-        android:id="@+id/replay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
-        android:gravity="center"
-        android:text="Replay"
-        android:textAppearance="@style/custom_font"
-        android:textColor="@color/beige"
-        android:textSize="50sp"
-        android:onClick="resetGame"/>
-
     <GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
         android:columnCount="3"
-        android:rowCount="3">
+        android:rowCount="3" >
 
         <Button
             android:id="@+id/btn0"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:tag="0"
             android:layout_row="0"
             android:layout_column="0"
-            android:layout_margin="10dp"
-            android:textSize="50sp"
-            android:textAppearance="@style/custom_font"
-            android:layout_gravity="center"
-            android:textColor="@color/beige"
-            android:background="@drawable/rounded_button"
-            android:onClick="handleBoardClick"
-            android:tag="0"/>
+            style="@style/BoardButton"
+            android:onClick="handleBoardClick" />
 
         <Button
             android:id="@+id/btn1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:tag="1"
             android:layout_row="0"
             android:layout_column="1"
-            android:layout_margin="10dp"
-            android:textSize="50sp"
-            android:textAppearance="@style/custom_font"
-            android:layout_gravity="center"
-            android:textColor="@color/beige"
-            android:background="@drawable/rounded_button"
-            android:onClick="handleBoardClick"
-            android:tag="1" />
+            style="@style/BoardButton"
+            android:onClick="handleBoardClick" />
 
         <Button
             android:id="@+id/btn2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:tag="2"
             android:layout_row="0"
             android:layout_column="2"
-            android:layout_margin="10dp"
-            android:textSize="50sp"
-            android:textAppearance="@style/custom_font"
-            android:layout_gravity="center"
-            android:textColor="@color/beige"
-            android:background="@drawable/rounded_button"
-            android:onClick="handleBoardClick"
-            android:tag="2" />
+            style="@style/BoardButton"
+            android:onClick="handleBoardClick" />
 
         <Button
             android:id="@+id/btn3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:tag="3"
             android:layout_row="1"
             android:layout_column="0"
-            android:layout_margin="10dp"
-            android:textSize="50sp"
-            android:textAppearance="@style/custom_font"
-            android:layout_gravity="center"
-            android:textColor="@color/beige"
-            android:background="@drawable/rounded_button"
-            android:onClick="handleBoardClick"
-            android:tag="3" />
+            style="@style/BoardButton"
+            android:onClick="handleBoardClick" />
 
         <Button
             android:id="@+id/btn4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:tag="4"
             android:layout_row="1"
             android:layout_column="1"
-            android:layout_margin="10dp"
-            android:textSize="50sp"
-            android:textAppearance="@style/custom_font"
-            android:layout_gravity="center"
-            android:textColor="@color/beige"
-            android:background="@drawable/rounded_button"
-            android:onClick="handleBoardClick"
-            android:tag="4" />
+            style="@style/BoardButton"
+            android:onClick="handleBoardClick" />
 
         <Button
             android:id="@+id/btn5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:tag="5"
             android:layout_row="1"
             android:layout_column="2"
-            android:layout_margin="10dp"
-            android:textSize="50sp"
-            android:textAppearance="@style/custom_font"
-            android:layout_gravity="center"
-            android:textColor="@color/beige"
-            android:background="@drawable/rounded_button"
-            android:onClick="handleBoardClick"
-            android:tag="5" />
+            style="@style/BoardButton"
+            android:onClick="handleBoardClick" />
 
         <Button
             android:id="@+id/btn6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:tag="6"
             android:layout_row="2"
             android:layout_column="0"
-            android:layout_margin="10dp"
-            android:textSize="50sp"
-            android:textAppearance="@style/custom_font"
-            android:layout_gravity="center"
-            android:textColor="@color/beige"
-            android:background="@drawable/rounded_button"
-            android:onClick="handleBoardClick"
-            android:tag="6" />
+            style="@style/BoardButton"
+            android:onClick="handleBoardClick" />
 
         <Button
             android:id="@+id/btn7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:tag="7"
             android:layout_row="2"
             android:layout_column="1"
-            android:layout_margin="10dp"
-            android:textSize="50sp"
-            android:textAppearance="@style/custom_font"
-            android:layout_gravity="center"
-            android:textColor="@color/beige"
-            android:background="@drawable/rounded_button"
-            android:onClick="handleBoardClick"
-            android:tag="7" />
+            style="@style/BoardButton"
+            android:onClick="handleBoardClick" />
 
         <Button
             android:id="@+id/btn8"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:tag="8"
             android:layout_row="2"
             android:layout_column="2"
-            android:layout_margin="10dp"
-            android:textSize="50sp"
-            android:textAppearance="@style/custom_font"
-            android:layout_gravity="center"
-            android:textColor="@color/beige"
-            android:background="@drawable/rounded_button"
-            android:onClick="handleBoardClick"
-            android:tag="8" />
+            style="@style/BoardButton"
+            android:onClick="handleBoardClick" />
 
     </GridLayout>
 
-    <!--    GameDraw Img-->
+    <!-- Back ImageView -->
+    <ImageView
+        android:id="@+id/ivBackIcon"
+        style="@style/BackImageView"
+        android:onClick="goToHome" />
+
+    <!-- Home ImageView -->
+    <ImageView
+        android:id="@+id/ivHomeIcon"
+        style="@style/HomeImageView"
+        android:onClick="goToHome" />
+
+    <!-- Setting ImageView -->
+    <ImageView
+        android:id="@+id/ivSettingIcon"
+        style="@style/SettingImageView"
+        android:onClick="goToSetting" />
+
+    <!--    GameDraw ImageView-->
     <ImageView
         android:contentDescription="@string/imageDescription"
         android:id="@+id/drawImg"
@@ -189,42 +120,28 @@
         android:visibility="gone"
         app:srcCompat="@drawable/draw"/>
 
-    <!--    Back Img-->
-    <ImageView
-        android:id="@+id/backimgview"
-        android:contentDescription="@string/imageDescription"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="15dp"
-        android:onClick="goBack"
-        app:srcCompat="@drawable/backicon"/>
-
-    <!--    Home Img-->
-    <ImageView
-        android:id="@+id/homeimgview"
-        android:contentDescription="@string/imageDescription"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="15dp"
+    <TextView
+        android:id="@+id/replay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:onClick="goToHome"
-        app:srcCompat="@drawable/homeicon"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp"
+        android:text="Replay"
+        android:textSize="50sp"
+        android:textColor="@color/beige"
+        android:textAppearance="@style/custom_font"
+        android:onClick="resetGame"/>
 
-    <!--    Setting Img-->
-    <ImageView
-        android:id="@+id/settingimgview"
-        android:contentDescription="@string/imageDescription"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_alignParentEnd="true"
-        android:onClick="goToSetting"
-        app:srcCompat="@drawable/settingsicon"/>
+    <TextView
+        android:id="@+id/event"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:text="Turn X"
+        android:textSize="50sp"
+        android:textColor="@color/beige"
+        android:textAppearance="@style/custom_font"/>
 
 </RelativeLayout>
-
-
-
-
