--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="red">#7c2e2e</color>
     <color name="green">#11e889</color>
     <color name="yellow">#ffc107</color>
-    <color name="keyboard">#FF000000</color>
+    <color name="gray">#1a1a1a</color>
 </resources>
