--- a/app/src/main/res/drawable/keyboard_border.xml
+++ b/app/src/main/res/drawable/keyboard_border.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FAEBD7" />
+    <solid android:color="@color/beige" />
     <corners android:radius="5dp" />
 
 </shape>
