--- a/app/src/main/res/layout/setting_layout.xml
+++ b/app/src/main/res/layout/setting_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1a1a1a">
+    android:background="@color/gray">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="100dp"
         android:orientation="vertical"
-        android:background="#1a1a1a"
+        android:background="@color/gray"
         android:visibility="gone">
 
         <Button
