--- a/app/src/main/res/drawable/exit_popup_background.xml
+++ b/app/src/main/res/drawable/exit_popup_background.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#11e889"/> <!-- Default color -->
-            <corners android:radius="20dp"/> <!-- Rounded corners -->
+            <solid android:color="#2A2A2A"/>
+            <corners android:radius="20dp"/>
         </shape>
     </item>
 </selector>
