--- a/app/src/main/res/drawable/keyboard_keys_background.xml
+++ b/app/src/main/res/drawable/keyboard_keys_background.xml
@@ -1,8 +1,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#7c2e2e"/>
-            <corners android:radius="20dp"/>
+            <solid android:color="@color/beige"/>
+            <corners android:radius="5dp"/>
         </shape>
     </item>
 </selector>
