--- a/app/src/main/res/layout/wordle_layout.xml
+++ b/app/src/main/res/layout/wordle_layout.xml
@@ -1,7 +1,7 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/gray">
 
     <!-- LetterBox Layout -->
@@ -350,7 +350,7 @@
                 android:textSize="20sp"
                 android:gravity="center"
                 android:clickable="true"
-                android:background="@drawable/keyboard_border"
+                android:background="@drawable/keyboard_keys_background"
                 android:drawableStart="@drawable/enter"
                 android:onClick="keyboardClicked"/>
 
@@ -406,7 +406,7 @@
                 android:textSize="20sp"
                 android:gravity="center"
                 android:clickable="true"
-                android:background="@drawable/keyboard_border"
+                android:background="@drawable/keyboard_keys_background"
                 android:drawableStart="@drawable/backspace"
                 android:onClick="keyboardClicked"/>
 
@@ -443,6 +443,17 @@
         android:onClick="resetGame"
         android:visibility="gone" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lavFlame"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="-10dp"
+        android:layout_marginEnd="50dp"
+        app:lottie_rawRes="@raw/flame"
+        app:lottie_loop="true"
+        android:visibility="gone"/>
+
     <RelativeLayout
         android:layout_width="100dp"
         android:layout_height="wrap_content"
@@ -452,7 +463,7 @@
 
         <TextView
             android:id="@+id/tvStreak"
-            android:background="@drawable/circle_border"
+            android:background="@drawable/circle_background"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerHorizontal="true"
@@ -469,7 +480,7 @@
             android:layout_below="@+id/tvStreak"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:background="@drawable/popup_background"
+            android:background="@drawable/exit_popup_background"
             android:gravity="center"
             android:padding="10dp"
             android:textAppearance="@style/custom_font"
@@ -478,5 +489,6 @@
             android:visibility="gone"/>
 
     </RelativeLayout>
+
 
 </RelativeLayout>
