--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/gray">
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lavGhost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:lottie_asyncUpdates="enabled"
+        app:lottie_cacheComposition="true"
+        app:lottie_rawRes="@raw/ghost"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        android:alpha="0.3"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -17,7 +29,6 @@
             android:id="@+id/bTicTacToe"
             android:text="TIC TAC TOE"
             style="@style/NavigationButton"
-            android:paddingEnd="20dp"
             android:onClick="handleTicTacToeButtonClick" />
 
         <Button
