--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,7 +55,7 @@
     </style>
 
     <style name="NavigationButton">
-        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:background">@drawable/ui_background</item>
         <item name="android:layout_width">250dp</item>
         <item name="android:layout_height">60dp</item>
         <item name="android:layout_margin">5dp</item>
@@ -65,7 +65,7 @@
     </style>
 
     <style name="BoardButton">
-        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:background">@drawable/ui_background</item>
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">100dp</item>
         <item name="android:layout_margin">10dp</item>
