--- a/app/src/main/res/drawable/exitno.xml
+++ b/app/src/main/res/drawable/exitno.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="#11e889"/>
+        <solid android:color="@color/green"/>
         <corners android:radius="20dp"/>
     </shape>
 </item>
