--- a/app/src/main/res/drawable/popup_background.xml
+++ b/app/src/main/res/drawable/popup_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#2A2A2A"/>
+            <solid android:color="@color/gray"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>
