--- a/app/src/main/res/drawable/ui_background.xml
+++ b/app/src/main/res/drawable/ui_background.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#7c2e2e"/>
+            <solid android:color="@color/red"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>
