--- a/app/src/main/res/drawable/wordle_letterbox_background.xml
+++ b/app/src/main/res/drawable/wordle_letterbox_background.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="#6A2626"/>
+        <solid android:color="@color/red"/>
         <corners android:radius="5dp"/>
     </shape>
 </item>
