--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="red">#7c2e2e</color>
     <color name="green">#11e889</color>
     <color name="yellow">#ffc107</color>
-    <color name="gray">#1a1a1a</color>
+    <color name="background">#1a1a1a</color>
+    <color name="gray">#2a2a2a</color>
+
 </resources>
